<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <TextView
            android:id="@+id/newAvatarTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_avatar_title"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <GridLayout
            android:id="@+id/GridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="3"
            android:rowCount="2">

            <ImageView
                android:id="@+id/logoImage01"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="1"

                android:layout_rowSpan="1"
                android:contentDescription="@string/emptyImageDescription"
                android:onClick="SetTeamIcon"
                app:srcCompat="@drawable/ic_logo_01"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <ImageView
                android:id="@+id/logoImage02"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_rowSpan="1"
                android:contentDescription="@string/emptyImageDescription"
                android:onClick="SetTeamIcon"
                app:srcCompat="@drawable/ic_logo_02"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/logoImage03"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnSpan="1"
                android:layout_rowSpan="1"
                android:contentDescription="@string/emptyImageDescription"
                android:onClick="SetTeamIcon"
                app:srcCompat="@drawable/ic_logo_03"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/logoImage04"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:layout_rowSpan="1"
                android:contentDescription="@string/emptyImageDescription"
                android:onClick="SetTeamIcon"
                app:srcCompat="@drawable/ic_logo_04"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/logoImage05"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnSpan="1"
                android:layout_rowSpan="1"
                android:contentDescription="@string/emptyImageDescription"
                android:onClick="SetTeamIcon"
                app:srcCompat="@drawable/ic_logo_05"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/logoImage00"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_columnSpan="1"
                android:layout_rowSpan="1"
                android:contentDescription="@string/emptyImageDescription"
                android:onClick="SetTeamIcon"
                app:srcCompat="@drawable/ic_logo_00"
                tools:ignore="SpeakableTextPresentCheck" />

        </GridLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/loadPhoneButton"
            android:layout_width="250dp"
            android:layout_height="62dp"
            android:layout_gravity="center"
            android:backgroundTint="#B50909"
            android:text="@string/avatarButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>